Table Player {
  id uuid [primary key, not null]
  name varchar [not null]
  state varchar [not null]
  history History
}

Table History {
  id uuid [primary key, not null]
  playerId uuid
  sessions Session[]
}

Table Session {
  id uuid [primary key, not null]
  status varchar [not null]
  history History
}

// One To One
Ref: Player.history - History.playerId

// One To Many
Ref: History.sessions < Session.history
